--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 <body>
     <p>***********0514************mongodb操作**************************</p>
     <form name="myForm" action="/input" method="GET">
-        数据1: <input type="text" name="first"><br>
-        数据2: <input type="text" name="second"><br>     
+        数据1: <input type="text" name="number1"><br>
+        数据2: <input type="text" name="number2"><br>     
             <input type="submit" name='submit1' value="Write">
             <input type="submit" name='submit1' value="Read">
     </form>   
